--- a/src/gtk-3.0/sass/_common.scss
+++ b/src/gtk-3.0/sass/_common.scss
@@ -3581,7 +3581,7 @@ tooltip {
     // background-color needs to be set this way otherwise it gets drawn twice
     // see https://bugzilla.gnome.org/show_bug.cgi?id=736155 for details.
     box-shadow: inset 0 1px $secondary_highlight_color;
-    background-color: scale-alpha($base_color, $higher_opacity);
+    background-color: scale-alpha($base_color, 1);
   }
 
   // @extend %osd;
