--- a/src/gtk-3.0/sass/_colors.scss
+++ b/src/gtk-3.0/sass/_colors.scss
@@ -60,7 +60,7 @@ $disabled_headerbar_fg_color: if($headerbar =='dark', $disabled_secondary_invers
 
 $headerbar_bg_color: #eeeeee;
 @if ($color == 'ruby' or $color == 'black') and $headerbar =='dark' { $headerbar_bg_color: if($variant =='light', #383838, #363636); }
-@if ($color == 'doder' or $color == 'beryl' or $color == 'amethyst') and $headerbar =='dark' { $headerbar_bg_color: if($variant =='light', #36393e, #36383e); }
+@if ($color == 'doder' or $color == 'beryl' or $color == 'amethyst') and $headerbar =='dark' { $headerbar_bg_color: if($variant =='light', #36393e, #181818); }
 
 // Selected and Theme colors
 $primary_color: #686868;
